force-app/main/default/objects/ContactTeam__c.object
<CustomObject>
    <description>Defines a team of users that hold a relationship with a contact. This is for visibility purposes only and does not imply any record access.</description>
    <fields>
        <fullName>Contact__c</fullName>
        <description>Relationship with the Contact Object</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>ContactTeams</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>MSDI Lead</fullName>
                </value>
                <value>
                    <fullName>PRM (Philanthropy)</fullName>
                </value>
                <value>
                    <fullName>Lead</fullName>
                </value>
                <value>
                    <fullName>Member</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Team_Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Team Member</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ContactTeams</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UniqueID__c</fullName>
        <label>UniqueID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Contact Team</label>
    <nameField>
        <displayFormat>CT-{00000}</displayFormat>
        <label>Contact Team Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contact Teams</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Validate_Unique_PRM</fullName>
        <active>true</active>
        <description>A PRM record already exists</description>
        <errorConditionFormula>ISPICKVAL(Role__c, &quot;PRM (Philanthropy)&quot;) &amp;&amp; Contact__r.ucinn_ascendv2__PRM__c &lt;&gt; Team_Member__c</errorConditionFormula>
        <errorMessage>There should only be one PRM per Contact</errorMessage>
    </validationRules>
</CustomObject>